--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name="google-site-verification" content="QByT3pjTbvu8wBaIrdxCWVicX7pQmLH2D0vHGPPAxM4" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ngx-accessible-ui - Accessible Angular Directives</title>
