--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </div>
     </nav>
 
-    <!-- Hero Section -->
+    <!-- Nav Section -->
     <header class="pt-24 pb-12 bg-gradient-to-r from-gray-900 to-blue-900 text-white">
         <div class="container mx-auto px-6 text-center">
             <h1 class="text-4xl md:text-6xl font-bold mb-6">Accessible Angular Directives</h1>
@@ -194,7 +194,7 @@ export class AppModule {}
 
                 <!-- Numpad Demo -->
                 <div class="bg-white p-6 rounded-xl shadow-lg">
-                    <h4 class="text-lg font-medium mb-4">Numpad Menu Demo</h4>
+                    <h4 class="text-lg font-medium mb-4">Advanced Numpad Menu Demo</h4>
                     <a href="ACCESSIBLE_MENU_NUMPAD_DEMO_URL" 
                        class="block bg-gray-100 hover:bg-gray-200 p-4 rounded-lg transition">
                         <img src="https://developer.stackblitz.com/img/open_in_stackblitz.svg" 
