--- a/index.html
+++ b/index.html
@@ -4,7 +4,18 @@
     <meta name="google-site-verification" content="QByT3pjTbvu8wBaIrdxCWVicX7pQmLH2D0vHGPPAxM4" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ngx-accessible-ui - Accessible Angular Directives</title>
+    <meta name="keywords" content="angular, accessibility, WCAG, European Accessibility Act 2025, ngx-accessible-ui, Angular accessibility, accessible menu, accessible navigation, keyboard navigation, keyboard shortcuts, focus management, assistive technologies, ARIA roles, screen reader support, UX design, Angular directive, navigation menu, web accessibility, inclusive design, a11y, frontend development, Angular components, open-source, usability, compliance, digital accessibility">
+    <meta name="description" content="ngx-accessible-ui: Two powerful Angular directives to create or transform any website into a fully accessible experience with `keyboard`, `touch`, and mouse support with ease.">
+    <meta property="og:title" content="ngx-accessible-ui: Accessible Angular Menu & Navigation">
+    <meta property="og:description" content="Improve web accessibility with ngx-accessible-ui, Two powerful Angular directives to create or transform any website into a fully accessible experience with `keyboard`, `touch`, and mouse support with ease.">
+    <meta property="og:url" content="https://shakeelkadri.github.io/ngx-accessible-ui/">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="https://shakeelkadri.github.io/ngx-accessible-ui/preview.png"> 
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="ngx-accessible-ui: Accessible Angular Menu & Navigation">
+    <meta name="twitter:description" content="Improve web accessibility with ngx-accessible-ui, Two powerful Angular directives to create or transform any website into a fully accessible experience with `keyboard`, `touch`, and mouse support with ease.">    
+    <meta name="twitter:image" content="https://shakeelkadri.github.io/ngx-accessible-ui/preview.png">
+    <title>ngx-accessible-ui – Accessible Angular Menus & Navigation</title>
     <link rel="stylesheet" href="tailwind.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/github-dark.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/highlight.min.js"></script>
@@ -44,8 +55,8 @@
     <!-- Nav Section -->
     <header class="pt-24 pb-12 bg-gradient-to-r from-gray-900 to-blue-900 text-white">
         <div class="container mx-auto px-6 text-center">
-            <h1 class="text-4xl md:text-6xl font-bold mb-6">Accessible Angular Directives</h1>
-            <p class="text-xl mb-8 opacity-90">Create fully accessible navigation and menus with ease</p>
+            <h1 class="text-4xl md:text-6xl font-bold mb-6">Accessible Angular Menus & Navigation</h1>
+            <p class="text-xl mb-8 opacity-90">Improve web accessibility with ngx-accessible-ui, two powerful Angular directives to create or transform any website into a fully accessible experience with `keyboard`, `touch`, and mouse support with ease."></p>
             <div class="space-x-4">
                 <a href="#installation" class="bg-blue-600 hover:bg-blue-700 px-6 py-3 rounded-lg font-medium transition">Get Started</a>
                 <a href="#demos" class="border border-white hover:border-blue-400 px-6 py-3 rounded-lg font-medium transition">View Demos</a>
