--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <header class="pt-24 pb-12 bg-gradient-to-r from-gray-900 to-blue-900 text-white">
         <div class="container mx-auto px-6 text-center">
             <h1 class="text-4xl md:text-6xl font-bold mb-6">Accessible Angular Menus & Navigation</h1>
-            <p class="text-xl mb-8 opacity-90">Improve web accessibility with ngx-accessible-ui, two powerful Angular directives to create or transform any website into a fully accessible experience with `keyboard`, `touch`, and mouse support with ease."></p>
+            <p class="text-xl mb-8 opacity-90">Improve web accessibility with ngx-accessible-ui, two powerful Angular directives to create or transform any website into a fully accessible experience with `keyboard`, `touch`, and mouse support with ease."</p>
             <div class="space-x-4">
                 <a href="#installation" class="bg-blue-600 hover:bg-blue-700 px-6 py-3 rounded-lg font-medium transition">Get Started</a>
                 <a href="#demos" class="border border-white hover:border-blue-400 px-6 py-3 rounded-lg font-medium transition">View Demos</a>
