--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <meta name="keywords" content="angular, accessibility, WCAG, European Accessibility Act 2025, ngx-accessible-ui, Angular accessibility, accessible menu, accessible navigation, keyboard navigation, keyboard shortcuts, focus management, assistive technologies, ARIA roles, screen reader support, UX design, Angular directive, navigation menu, web accessibility, inclusive design, a11y, frontend development, Angular components, open-source, usability, compliance, digital accessibility">
     <meta name="description" content="ngx-accessible-ui: Two powerful Angular directives to create or transform any website into a fully accessible experience with `keyboard`, `touch`, and mouse support with ease.">
     <meta property="og:title" content="ngx-accessible-ui: Accessible Angular Menu & Navigation">
-    <meta property="og:description" content="Improve web accessibility with ngx-accessible-ui, Two powerful Angular directives to create or transform any website into a fully accessible experience with `keyboard`, `touch`, and mouse support with ease.">
+    <meta property="og:description" content="Improve web accessibility with ngx-accessible-ui, two powerful Angular directives to create or transform any website into a fully accessible experience with `keyboard`, `touch`, and mouse support with ease.">
     <meta property="og:url" content="https://shakeelkadri.github.io/ngx-accessible-ui/">
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://shakeelkadri.github.io/ngx-accessible-ui/preview.png"> 
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="ngx-accessible-ui: Accessible Angular Menu & Navigation">
-    <meta name="twitter:description" content="Improve web accessibility with ngx-accessible-ui, Two powerful Angular directives to create or transform any website into a fully accessible experience with `keyboard`, `touch`, and mouse support with ease.">    
+    <meta name="twitter:description" content="Improve web accessibility with ngx-accessible-ui, two powerful Angular directives to create or transform any website into a fully accessible experience with `keyboard`, `touch`, and mouse support with ease.">    
     <meta name="twitter:image" content="https://shakeelkadri.github.io/ngx-accessible-ui/preview.png">
     <title>ngx-accessible-ui – Accessible Angular Menus & Navigation</title>
     <link rel="stylesheet" href="tailwind.css">
