--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@ export class AppModule {}
             <div class="grid md:grid-cols-1 gap-6">
                 <div class="bg-white p-6 rounded-xl shadow-lg">
                     <h4 class="text-lg font-medium mb-4">Basic Navigation Demo</h4>
-                    <a href="ACCESSIBLE_NAVIGATION_BASIC_DEMO_URL" 
+                    <a href="https://stackblitz.com/edit/ngx-accessible-ui-accessible-navigation-basic?file=src%2Fmain.ts" 
                        class="block bg-gray-100 hover:bg-gray-200 p-4 rounded-lg transition">
                         <img src="https://developer.stackblitz.com/img/open_in_stackblitz.svg" 
                              alt="StackBlitz" 
@@ -184,7 +184,7 @@ export class AppModule {}
                 <!-- Basic Demo -->
                 <div class="bg-white p-6 rounded-xl shadow-lg">
                     <h4 class="text-lg font-medium mb-4">Basic Menu Demo</h4>
-                    <a href="ACCESSIBLE_MENU_BASIC_DEMO_URL" 
+                    <a href="https://stackblitz.com/edit/ngx-accessible-ui-accessible-menu-basic?file=src%2Fmain.ts" 
                        class="block bg-gray-100 hover:bg-gray-200 p-4 rounded-lg transition">
                         <img src="https://developer.stackblitz.com/img/open_in_stackblitz.svg" 
                              alt="StackBlitz" 
@@ -195,7 +195,7 @@ export class AppModule {}
                 <!-- Advanced Demo -->
                 <div class="bg-white p-6 rounded-xl shadow-lg">
                     <h4 class="text-lg font-medium mb-4">Advanced Menu Demo</h4>
-                    <a href="ACCESSIBLE_MENU_ADVANCED_DEMO_URL" 
+                    <a href="https://stackblitz.com/edit/ngx-accessible-ui-accessible-menu-advance?file=src%2FfoodMenu.html" 
                        class="block bg-gray-100 hover:bg-gray-200 p-4 rounded-lg transition">
                         <img src="https://developer.stackblitz.com/img/open_in_stackblitz.svg" 
                              alt="StackBlitz" 
@@ -206,7 +206,7 @@ export class AppModule {}
                 <!-- Numpad Demo -->
                 <div class="bg-white p-6 rounded-xl shadow-lg">
                     <h4 class="text-lg font-medium mb-4">Advanced Numpad Menu Demo</h4>
-                    <a href="ACCESSIBLE_MENU_NUMPAD_DEMO_URL" 
+                    <a href="https://stackblitz.com/edit/ngx-accessible-ui-accessible-menu-advance-numpad?file=src%2FnumpadMenu.html" 
                        class="block bg-gray-100 hover:bg-gray-200 p-4 rounded-lg transition">
                         <img src="https://developer.stackblitz.com/img/open_in_stackblitz.svg" 
                              alt="StackBlitz" 
