--- a/index.html
+++ b/index.html
@@ -75,8 +75,10 @@
                     Demos</a>
             </div>
         </div>
-        <div id="gif-container"></div>        
     </header>
+    
+    <!-- accessibleMenu animation -->
+    <div id="gif-container"></div>
 
     <!-- Main Content -->
     <main class="container mx-auto px-6 pt-12 pb-24">
