--- a/index.html
+++ b/index.html
@@ -78,7 +78,10 @@
     </header>
     
     <!-- accessibleMenu animation -->
-    <div id="gif-container"></div>
+    <div class="container mx-auto px-6 text-center">
+        <h2 class="text-3xl font-bold mb-6">accessibleMenu Animation</h2>
+        <div id="gif-container"></div>
+    </div>
 
     <!-- Main Content -->
     <main class="container mx-auto px-6 pt-12 pb-24">
