--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     </header>
     
     <!-- accessibleMenu animation -->
-    <div class="container mx-auto px-6 text-center">
+    <div class="container mx-auto px-6 pt-12" style="display: flex;flex-direction: column;align-items: center;">
         <h2 class="text-3xl font-bold mb-6">accessibleMenu Animation</h2>
         <div id="gif-container"></div>
     </div>
