--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@ export class AppModule {}
     <footer class="bg-gray-900 text-white py-8">
         <div class="container mx-auto px-6">
             <div class="text-center">
-                <p class="mb-4">Maintained by <a href="https://github.com/shakeelkadir"
+                <p class="mb-4">Maintained by <a href="https://github.com/shakeelkadri"
                         class="text-blue-400 hover:text-blue-300">Shakeel Kadri</a></p>
                 <p class="text-gray-400">Licensed under MIT License</p>
             </div>
