--- a/index.html
+++ b/index.html
@@ -54,7 +54,9 @@
                     <a href="#usage" class="hover:text-blue-400 transition">Usage</a>
                     <a href="#directives" class="hover:text-blue-400 transition">Directives</a>
                     <a href="#demos" class="hover:text-blue-400 transition">Demos</a>
+                    <a href="eaa-compliance.html">EAA Compliance Guide</a>
                     <a href="https://npmjs.com/package/ngx-accessible-ui" class="hover:text-blue-400 transition">NPM</a>
+                    <a href="https://github.com/ShakeelKadri/ngx-accessible-ui">GitHub Repo</a>                    
                 </div>
             </div>
         </div>
@@ -249,7 +251,7 @@ export class AppModule {}
     <footer class="bg-gray-900 text-white py-8">
         <div class="container mx-auto px-6">
             <div class="text-center">
-                <p class="mb-4">Maintained by <a href="https://github.com/shakeelkadri"
+                <p class="mb-4">Maintained by <a href="https://github.com/ShakeelKadri/ngx-accessible-ui"
                         class="text-blue-400 hover:text-blue-300">Shakeel Kadri</a></p>
                 <p class="text-gray-400">Licensed under MIT License</p>
             </div>
